@@ -1,3 +1,8 @@
+2018-10-21  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* sysdeps/x86/hp-timing.h: Don't include <x86intrin.h>.
+	(HP_TIMING_NOW): Replace _rdtsc with __builtin_ia32_rdtsc.
+
 2018-10-19  Joseph Myers  <joseph@codesourcery.com>
 
 	[BZ #23794]
